--- a/guixe/Css/Sidebar-header.css
+++ b/guixe/Css/Sidebar-header.css
@@ -153,3 +153,23 @@
   .drop-menu-item i{
     margin-right: 5px;
   }
+  .main-panel {
+    -webkit-transition: width 0.25s ease, margin 0.25s ease;
+    transition: width 0.25s ease, margin 0.25s ease;
+    min-height: calc(100vh - 60px);
+    width: 100%;
+    padding-top: 60px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  .content-wrapper {
+    padding: 1.5rem;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+  }
