--- a/guixe/Css/Sidebar-header.css
+++ b/guixe/Css/Sidebar-header.css
@@ -142,14 +142,34 @@
     border: 1px solid #e4e9f0;
     border-radius: 3px;
   }
-  /*.drop-menu-item{*/
-  /*  font-size: 14px;*/
-  /*  padding: 10px;*/
-  /*  margin: 5px 0px;*/
-  /*  &:first-child{*/
-  /*    border-bottom: 1px solid #e4e9f0;*/
-  /*  }*/
-  /*}*/
+  .drop-menu-item{
+    font-size: 14px;
+    padding: 10px;
+    margin: 5px 0px;
+    &:first-child{
+      border-bottom: 1px solid #e4e9f0;
+    }
+  }
   .drop-menu-item i{
     margin-right: 5px;
+  }
+  .main-panel {
+    -webkit-transition: width 0.25s ease, margin 0.25s ease;
+    transition: width 0.25s ease, margin 0.25s ease;
+    min-height: calc(100vh - 60px);
+    width: 100%;
+    padding-top: 60px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  .content-wrapper {
+    padding: 1.5rem;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
   }
