--- a/guixe/Css/index.css
+++ b/guixe/Css/index.css
@@ -6,6 +6,7 @@
     align-items: center;
 }
 
+/*Btn css*/
 .btn {
 
     display: inline-block;
@@ -72,4 +73,88 @@
 
 .btn.btn {
     margin-right: 5px;
+}
+/*End btn css*/
+
+/* Toast */
+
+#toast{
+    position: fixed;
+    top: 32px;
+    right: 32px;
+    z-index: 99999;
+}
+
+.toast+.toast {
+    margin-top: 23px;
+}
+
+.toast {
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 2px;
+    border-left: 4px solid;
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.07);
+    width: 400px;
+    max-width: 450px;
+    animation: slideInLeft ease 0.7s, fadeOut linear 1s 3s forwards;
+    transition: all linear 0.25s;
+}
+
+@keyframes slideInLeft {
+    from {
+        opacity: 0;
+        transform: translateX(calc(100% + 32px));
+    }
+
+    to {
+        transform: translateX(0);
+    }
+}
+
+@keyframes fadeOut{
+    to{
+        opacity: 0;
+    }
+}
+
+.toast_message {
+    font-size: 16px;
+    color: #333;
+    flex-grow: 1;
+    padding: 7px 0;
+}
+
+.toast-success, .toast_icon > i{
+    color: #47d864;
+}
+
+.toast-warning .toast_icon > i{
+    color: #ffcc00;
+}
+
+.toast-err .toast_icon > i{
+    color: #cc3300;
+}
+
+.toast_msg {
+    padding: 7px 0;
+}
+
+.toast_icon {
+    padding: 0 12px;
+}
+
+.toast_message {
+    margin-left: 11px;
+    margin-top: 4px;
+
+}
+
+.toast_close {
+    padding: 0 17px;
+    color: rgba(0, 0, 0, 0.23);
+    cursor: pointer;
+    font-size: 21px;
 }
